# skeptik

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  sample_data.py  schemas.py
backend/app/services/: __init__.py  agents.py  autopilot.py  brightdata.py  errors.py  ingestion.py  integrations.py  newsroom.py  storage.py  tavily.py  utils.py  virlo.py
backend/skeptik_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: LINKEDIN_POST.md  TECHNICAL_BLOG.md  X_THREAD.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/articles/[slug]/: page.tsx
frontend/components/: article-card.tsx  footer-rail.tsx  score-pill.tsx  site-header.tsx
frontend/components/ui/: badge.tsx  card.tsx
frontend/lib/: api.ts  types.ts
