[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeptik-backend"
version = "0.1.0"
description = "Autonomous AI-native newsroom backend"
requires-python = ">=3.11"
dependencies = [
  "agno>=1.8.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.54.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
